<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:title="Search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="always"
        app:actionViewClass="android.widget.SearchView"
        />
    <item android:id="@+id/add_list_purchase"
        android:title="AddPurchase"
        android:icon="@android:drawable/ic_menu_add"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/shopping_total"
        android:title="S/."
        android:textStyle="bold"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_camera"
        android:icon="@drawable/ic_camera"
        android:title="Camera"
        app:showAsAction="always"></item>
    <item
        android:id="@+id/action_addcart"
        android:icon="@drawable/ic_shopping_cart"
        android:title="Add Cart"
        app:actionLayout="@layout/menu_cartcount"
        app:showAsAction="always"></item>
    <item
        android:id="@+id/action_delete_all"
        android:title="Eliminar Todo"
        />
</menu>